--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,3 @@
-table {
-  border-collapse: collapse;
-  width: 100%;
-}
-
-th,
-td {
-  width: 100%;
-}
-
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
@@ -22,6 +12,7 @@ body {
   max-width: 700px;
   margin-left: auto;
   margin-right: auto;
+  border-collapse: collapse;
 }
 
 .mainHeader {
@@ -30,11 +21,11 @@ body {
 }
 
 .mainHeader-message {
-  font-family: Lato-Regular;
+  font-family: 'Lato', sans-serif;
   font-size: 20px;
   color: #4A4A4A;
   text-align: left;
-  max-width: 390px;
+  max-width: 60%;
   float: left;
   margin: 0;
 }
@@ -44,29 +35,71 @@ body {
   float: right;
 }
 
-.orders {
+.card {
   width: 100%;
   border-radius: 5px;
   background-color: white;
   margin-bottom: 20px;
   box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.12);
+  border-collapse: collapse;
 }
 
-.orders-header {
+.card-header {
   padding: 30px 50px;
   border-bottom: 2px solid #EFEFEF;
 }
 
-.orders-title {
+.card-title {
   margin: 0;
   text-align: left;
   font-size: 24px;
   color: #4A4A4A;
 }
 
-.orders-details {
+.card-content {
+  padding: 10px 50px 30px;
+}
+
+.card-link {
+  text-decoration: none;
+  color: inherit;
+}
+
+.card-link:hover {
+  text-decoration: underline;
+}
+
+.order-details {
   width: 100%;
+  margin-top: 20px;
   table-layout: fixed;
+  border-bottom: 1px solid #EFEFEF;
+  border-collapse: collapse;
+}
+
+.order-rowspace {
+  height: 15px;
+}
+
+.order-rowspace2 {
+  height: 30px;
+}
+
+.order-col1 {
+  width: 35%;
+  padding-right: 5%;
+  vertical-align: top;
+}
+
+.order-col2 {
+  width: 30%;
+  vertical-align: top;
+}
+
+.order-col3 {
+  width: 25%;
+  padding-left: 5%;
+  vertical-align: top;
 }
 
 .tag {
